--- a/assets/style.css
+++ b/assets/style.css
@@ -4,8 +4,12 @@ body{
     background-color: rgb(19, 19, 73);
     color: white;
 }
+
+
+/*header*/
+
 header{
-    background-image: url(./image/image\ footer.jpg);
+    background-image: url(./image/image-footer.jpg);
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -32,7 +36,7 @@ header .burger-img {
 }
 
 
-
+/*title*/
 
 
 h1{
@@ -40,7 +44,7 @@ h1{
     margin-top: 70px;
 }
 
-
+/*1 section*/
 
 .first-section{
     display: flex;
@@ -58,7 +62,7 @@ h1{
     margin-right: 40px;
 }
 
-
+/*2 section*/
 
 .second-section{
     display: flex;
@@ -72,7 +76,7 @@ h1{
     margin-right: 40px;
 }
 
-
+/*3 section*/
 
 .tree-section{
     display: flex;
@@ -86,7 +90,7 @@ h1{
     margin-right: 40px;
 }
 
-
+/*logo lien*/
 
 .link-logo img{
     width: 150px;
@@ -113,48 +117,67 @@ h1{
     transform: scale(1.1);
 }
 
+/*footer*/
 
 
-.formulaire{
+footer{
     display: flex;
     flex-direction: row;
-    background-color: rgba(85, 84, 84, 0.666);
-}
-.formulaire article{
-    display: flex;
     justify-content: center;
+    padding-inline-start: 20%;
+    margin: 50px;
+    background-color: black;
+    padding: 100px;
+}
+.social-media{
+    display: flex;
+    flex-direction: row;
+    gap: 20px;
+    margin-top: 20px;
+}
+.social-media img{
+    width: 25px;
+}
+.contact a{
+    text-decoration: none;
+    color: white;
+    display: flex;
     flex-direction: column;
+    gap: 10px;
+    margin: 0%;
+    padding: 0%;
+}
+.contact p{
+    margin: 0%;
+    padding: 0%;
+}
+footer section{
     width: 50%;
 }
-.formulaire article:first-of-type{
-    margin-left: 50px;
+.contact h4{
+    font-size: x-large;
 }
-h4{
-    text-align: center;
-    font-size: xx-large;
+.formulaire input{
+    width: 370px;
 }
-.espace{
-    margin-top: 20px;
+.area-contact{
+    width: 370px;
+    height: 100px;
+}
+.formulaire{
+    margin-right: -200px;
 }
 .envoie{
-    margin-top: 50px;
-}
-.espace div{
-    margin-bottom: 10px;
-}
-.metier input{
+    border-radius: 25px;
+    padding-inline: 20px;
     margin-top: 20px;
+    transition: background-color 0,5s ease;
 }
-footer{
-    background-image: url(./image/image\ footer.jpg);
-    padding-bottom: 60px;
-    padding-top: 30px;
-    margin-top: 50px;
+.envoie:hover{
+    background-color: rgb(242, 180, 66);
 }
 
-
-
-
+/*responsiv*/
 
 
 @media screen and (max-width: 768px){
@@ -207,19 +230,35 @@ footer{
         width: 300px;
         display: flex;
         flex-direction: column;
-    
     }
 
 
 
-    .formulaire{
+
+    footer{
+        display: block;
         display: flex;
-        flex-direction: column;
         align-items: center;
+        flex-direction: column;
         text-align: center;
+        padding: 40px;
     }
-    .formulaire article:first-child{
+    .formulaire input{
+        width: 200px;
+    }
+    .area-contact{
+        width: 200px;
+    }
+    footer section{
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+    }
+    .envoie{
+        padding-inline: 60px;
+        font-size: larger;
+    }
+    .formulaire{
         margin: 0%;
-        margin-bottom: 40px;
     }
 }
